[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dashboard"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
trackshift = { path = "../brain" }
quic_fec = { path = "../quic_fec" }

[dev-dependencies]

